Fix display on iPhone 4

--- a/static/components/tpo-reading/tpo-reading.css
+++ b/static/components/tpo-reading/tpo-reading.css
@@ -83,7 +83,10 @@
   }
   .question-control {
     display: inline-block;
-    margin: 3px 10px;
+    margin: 3px 1px;
+  }
+  .question-control t-button {
+    width: 74px;
   }
   .controls {
     position: fixed;
